--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>SERPAS</title>
-
+    <script src="js/reactjs/main.js" type = "text/babel"></script>
   </head>
   <body>
     <div id="root"></div>
