--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,7 @@
     <meta name="theme-color" content="#000000" />
     <title>SERPAS</title>
     <script src="js/reactjs/main.js" type = "text/babel"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@1,600&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
